--- a/dev/less/general.less
+++ b/dev/less/general.less
@@ -1,4 +1,4 @@
-// @import 'imports/reset.css';
+@import 'imports/reset.css';
 @import 'imports/_setting';
 @import 'imports/_mixins';
 @import 'imports/sprite';
